# gnverify-rs

./: ..datamy-checklist-col-map.csv  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  \
src/: error.rs  format.rs  lib.rs
src/verif/: mod.rs  output.rs  output_csv.rs  query.graphql  remote.rs  schema.json  verification.rs
testdata/: no_index.csv  test.csv  with_other_fields.csv
