[package]
name = "gnverify"
description = "Takes a scientific name or a list of names and verifies them against a variety of biodiversity Data Sources"
readme = "README.md"
license = "MIT"
version = "0.2.0"
authors = ["Dmitry Mozzherin <dmozzherin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
graphql_client = "0.9"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
anyhow = "1"
reqwest = "0.9"
csv = "1"
thiserror = "1"
strum = "0.18"
strum_macros = "0.18"
atty = "0.2"
same-file = "1"
winapi-util = "0.1.4"
log = "0.4"
stderrlog = "0.4"

[dependencies.clap]
version = "2"
default_features = true
features = ["yaml"]
